Bug 114333 - RTF IMPORT: Half-width right-shifted table width is incorrect in specific document
Summary: RTF IMPORT: Half-width right-shifted table width is incorrect in specific doc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.1.0
Keywords: filter:rtf, notBibisectable, regression
Depends on:
Blocks: RTF-Opening
  Show dependency treegraph
 
Reported: 2017-12-08 09:21 UTC by Mike Kaganski
Modified: 2018-11-21 22:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A sample RTF with table aligned to right page border (120 bytes, application/msword)
2017-12-08 09:21 UTC, Mike Kaganski
Details
comparison LibreOffice 6.1 and MSO 2010 (16.80 KB, image/png)
2017-12-08 09:50 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2017-12-08 09:21:10 UTC
Created attachment 138297 [details]
A sample RTF with table aligned to right page border

The attached RTF imports with incorrect (too wide) table width, which goes rightwards outside of the page. The table should be 1/2 page width, indented from left by 1/2 page width. Imported table width is equal to page width, which, combined with indent, makes it go out of page.

It looks like cell's cellx attribute is counted in LO from table left, not from page left as it should.

OK in 3.3; already bad in 3.6. Still wrong with Version: 6.1.0.0.alpha0+ (x64)
Build ID: dccfe8765c25caf8485e659711a6df6c43ed63a9
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: ru-RU (ru_RU); Calc: CL.
Comment 1 Xisco Faulí 2017-12-08 09:50:02 UTC
Created attachment 138301 [details]
comparison LibreOffice 6.1 and MSO 2010
Comment 2 Xisco Faulí 2017-12-08 09:50:18 UTC
Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 495ac1bc97f3deea8e13cb1a2b9f59d087873c3f
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: en-US (ca_ES.UTF-8); Calc: group threaded
Comment 3 Mike Kaganski 2017-12-08 16:34:16 UTC
Patch is in gerrit: https://gerrit.libreoffice.org/46094
Comment 4 Commit Notification 2017-12-11 11:00:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0f9a596aa853b4f2beeff25c131246a7b31492a4

tdf#114333: consider trleft for 1st cell width on import; don't...

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.