tdf#114333: consider trleft for 1st cell width on import; don't...

... recalculate cell widths by factor pagewidth/tablewidth on export
This makes the import and export symmetrical.

Unit test included.

Some existing unit tests were updated:
- testTdf97035: the previous width of B1 cell (3571 twips) was not
stable enough on round-trip. Old code saved table with wrong width,
and incidentally that made it to output correct width of the cell.
New code outputs table width correctly, and drops unneeded cell width
adjustment on export, so the rounding error on initial import makes
output cell width wrong.
We have a cumbersome arithmetics to import cell widths from RTF:
1. In DomainMapperTableManager::sprm (case NS_ooxml::LN_CT_TblGridBase_gridCol)
we do convertTwipToMM100 on initial sizes in twips;
2. Then, in DomainMapperTableManager::endOfRowAction, we do
rtl::math::round((fGridWidth * 10000) / nFullWidthRelative) on the
mm100 sizes (the 10000 is UNO_TABLE_COLUMN_SUM from unotbl.cxx, which
allows to measure cell widths in 100ths of percent of table's width
instead of absolute sizes)
3. Last, in SwTable::NewSetTabCols, we do
lcl_MulDiv64<long>(nNewPos, rParm.nNewWish, nNewWidth)
where rParm.nNewWish is table's width in twips (again), and nNewWidth
is 10000. So, the three permutations give us twips back, but rounding
errors may make result differ from initial value (as in case of cell
width 1927 twips and table width 15527 twips, which results in 1926).

The unstable width that resulted in roundtrip error was changed by 1.
The changed unit test file is checked to still correctly test tdf#97035

- testFdo55525: previously, the testdoc was imported with wrong width
(too narrow); that caused rounding error on cell width calculation.
Current tested value is more correct.

Change-Id: I69112521c35b316ed6df11d5e4ff7336534164bd
Reviewed-on: https://gerrit.libreoffice.org/46094
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>